--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -35,6 +35,12 @@ a {
   text-decoration: none;
 }
 
+svg {
+  width: 100%;
+  height: auto;
+  position: absolute;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
