--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -30,15 +30,32 @@ body {
   margin: 0;
 }
 
+h3 {
+  font-weight: 400;
+  margin: 0 0 0.5rem 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
-svg {
+.parts-and-connections svg {
   width: 100%;
   height: auto;
   position: absolute;
+}
+
+.parts-and-connections svg path {
+  stroke: #e6e6e6;
+}
+
+.parts-and-connections svg path:hover {
+  stroke: black;
+}
+
+.logo {
+  width: 2rem;
 }
 
 @media (prefers-color-scheme: dark) {
