--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -10,6 +10,11 @@
   }
 }
 
+.uppercase-mono {
+  font-family: var(--font-departure-mono);
+  text-transform: uppercase;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -51,6 +56,10 @@ h6 {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+a:hover {
+  background: yellow;
 }
 
 section {
