--- a/frontend/app/anatomy/page.module.scss
+++ b/frontend/app/anatomy/page.module.scss
@@ -1,36 +1,44 @@
 .page {
-  display: grid;
-  grid-template-columns: 1fr 34rem;
-  gap: 0;
   background: var(--background);
-
-  > div {
-    min-height: 100svh;
-    position: relative;
-  }
-
-  > div:first-child {
-    width: calc(100vw - 34rem);
-  }
-
-  > div:nth-child(2) {
-    width: 34rem;
-    background: var(--background);
-    border-left: var(--foreground) 1px solid;
-  }
+  background-image: repeating-linear-gradient(0deg,#eee 0px,#eee 1px,transparent 1px,transparent 20px), repeating-linear-gradient( 90deg, #eee 0px, #eee 1px, transparent 1px, transparent 20px);
+  background-size: 20px 20px;
+  min-height: 100svh;
 }
 
-.collapsed {
-  grid-template-columns: 1fr 2rem;
+  // > div:first-child {
+  //   width: calc(100vw - 34rem);
+  // }
 
-  > div:first-child {
-    width: calc(100vw - 2rem);
-  }
+  // > div:nth-child(2) {
+  //   width: 34rem;
+  //   background: var(--background);
+  //   border-left: var(--foreground) 1px solid;
+  // }
 
-  > div:nth-child(2) {
-    width: 2rem;
-  }
-}
+// .collapsed {
+//   grid-template-columns: 1fr 2rem;
+
+//   > div:first-child {
+//     width: calc(100vw - 2rem);
+//   }
+
+//   > div:nth-child(2) {
+//     width: 2rem;
+//   }
+// }
+
+// .expanded {
+//   grid-template-columns: 10rem 1fr;
+
+//   > div:first-child {
+//     width: 10rem;
+//     padding-top: 3rem;
+//   }
+
+//   > div:nth-child(2) {
+//     width: 100%;
+//   }
+// }
 
 .navigation-drawer {
   width: 100%;
