--- a/frontend/app/components/navigation.module.scss
+++ b/frontend/app/components/navigation.module.scss
@@ -14,4 +14,10 @@
     text-transform: uppercase;
     font-size: 0.75rem;
   }
+
+  svg {
+    max-height: 0.875rem;
+    width: auto;
+    margin-right: -1rem;
+  }
 }
