--- a/frontend/app/globals.scss
+++ b/frontend/app/globals.scss
@@ -2,6 +2,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --accent: rgb(229, 255, 0);
+  --green: #098b23;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -17,10 +18,16 @@
   font-weight: 400;
 }
 
+.pane {
+  backdrop-filter: blur(8px);
+  background: rgba(255, 255, 255, 0.2);
+}
+
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -40,13 +47,17 @@ main {
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 h1 {
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
+  font-weight: 400;
+}
+
+h2 {
+  margin: 0;
+  font-size: 1.25rem;
   font-weight: 400;
 }
 
@@ -61,12 +72,16 @@ h6 {
   font-size: 0.75rem;
   text-transform: uppercase;
   font-weight: 400;
-  margin: 3rem 0 0.5rem 0;
+  margin: 0;
 }
 
 p {
   margin: 0.75em 0;
   line-height: 1.6em;
+}
+
+figure {
+  margin: 0;
 }
 
 .large {
@@ -75,12 +90,15 @@ p {
 }
 
 button {
+  @extend .pane;
   background: rgba(0, 0, 0, 0);
   border: none;
   cursor: pointer;
   padding: 0.375rem;
-  backdrop-filter: blur(15px);
-  background: rgba(255, 255, 255, 0.2);
+}
+
+.pane button {
+  backdrop-filter: none;
 }
 
 button svg {
@@ -92,9 +110,16 @@ button:hover {
 }
 
 input[type="text"] {
+  @extend .pane;
   border-radius: 0;
   border: 1px solid var(--background);
-  padding: 0.25rem;
+  padding: 0.4375rem;
+  height: 2rem;
+
+  &:active,
+  &:focus {
+    outline: none;
+  }
 }
 
 div.range-slider {
@@ -106,7 +131,8 @@ div.range-slider {
   height: 1rem;
 }
 
-a, .link {
+a,
+.link {
   cursor: pointer;
   text-decoration: none;
   color: var(--foreground);
@@ -130,9 +156,23 @@ main {
   padding: 3.5rem 0.5rem;
 }
 
+section {
+  max-width: 100%;
+}
+
 .narrow {
   max-width: 34rem;
   margin: 0 auto;
+}
+
+.wide {
+  max-width: 80rem;
+  margin: 0 auto;
+}
+
+.nextjs-toast,
+nextjs-portal {
+  display: none;
 }
 
 figcaption {
@@ -145,8 +185,6 @@ figcaption {
   padding: 0.5rem;
   margin: 3rem 0;
 }
-
-
 
 .grid {
   display: grid;
