--- a/frontend/app/components/TogglePane_old/toggle-pane.module.scss
+++ b/frontend/app/components/TogglePane_old/toggle-pane.module.scss
@@ -1,4 +1,4 @@
-.annotations {
+.toggle-pane {
   position: fixed;
   z-index: 10;
   right: 2.5rem;
@@ -6,7 +6,6 @@
   top: 3rem;
   width: 50vw;
   max-width: 32rem;
-  padding: 0.5rem;
   border: 1px solid;
   max-height: calc(100% - 4rem);
   overflow: auto;
@@ -18,12 +17,8 @@
     border: 1px solid;
     display: inline-flex;
     flex-direction: row;
-    h6 {
-      padding: 0.5rem;
-      &:not(:last-child) {
-        border-right: 1px solid;
-        white-space: nowrap;
-      }
-    }
+  }
+  h6 {
+    padding: 0.5rem;
   }
 }
